Final check through Adam S typos #9

--- a/05-multi-agyw.Rmd
+++ b/05-multi-agyw.Rmd
@@ -404,7 +404,7 @@ For comparison, I also computed the deviance information criterion (DIC) [@spieg
 Each of these criterion can be calculated in `R-INLA` without requiring model refitting.
 The results are presented in Table \@ref(tab:model-comparison-multinomial) and Figure \@ref(fig:model-comparison).
 
-(ref:model-comparison) For the multinomial logistic regression model, under the conditional predictive ordinate (CPO) criterion, including Besag spatial random effects rather than IID spatial random effects improved model performance. On the other hand, under the deviance information criterion (DIC) and widely applicable information criterion (WAIC), where smaller values are preferred, the opposite was true. Though IID temporal random effects are preferred by all criteria AR1 temporal random effects performed very similarly, likely as there is a limited amount of temporal variation in the data to describe.
+(ref:model-comparison) For the multinomial logistic regression model, under the conditional predictive ordinate (CPO) criterion, including Besag spatial random effects rather than IID spatial random effects improved model performance. On the other hand, under the deviance information criterion (DIC) and widely applicable information criterion (WAIC), where smaller values are preferred, the opposite was true. Though IID temporal random effects are preferred by all criteria, AR1 temporal random effects performed very similarly, likely as there is a limited amount of temporal variation in the data to describe.
 
 ```{r model-comparison, fig.cap="(ref:model-comparison)"}
 knitr::include_graphics(paste0("resources/multi-agyw/", resource_version, "/depends/model-comparison.png"))
