Three more small things! #9

--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -321,7 +321,7 @@ The equation for the linear predictor is the same as the linear model case in Eq
 
 In a generalised linear mixed effects model (GLMM) the linear predictor of the GLM is extended as follows
 \begin{equation}
-\eta_i = \beta_0 + \sum_{l = 1}^{p} \beta_l z_{li} + \sum_{k = 1}^{r} u_k(w_{ki}).
+\eta_i = \beta_0 + \sum_{l = 1}^{p} \beta_l z_{li} + \sum_{k = 1}^{r} u_k(w_{ki}). (\#eq:glmm-lp)
 \end{equation}
 The terms $\beta_l$ are referred to as fixed effects.
 The terms $u_k$ are called random effects, of additional covariates $w_{ki}$.
@@ -367,6 +367,7 @@ The posterior distribution under an LGM is then
 p(\mathbf{x}, \boldsymbol{\mathbf{\theta}} \, | \, \mathbf{y}) \propto p(\mathbf{y} \, | \, \mathbf{x}, \boldsymbol{\mathbf{\theta}}) p(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}) p(\boldsymbol{\mathbf{\theta}}),
 \end{equation}
 with the complete set of parameters $\boldsymbol{\mathbf{\phi}} = (\mathbf{x}, \boldsymbol{\mathbf{\theta}})$, and $N + m = d$.
+In an LGM, like the more general GLMM case as given in Equation \@ref(eq:glmm-lp), there is a one-to-one correspondence between observations $y_i$ and elements of the linear predictor $\eta_i$.
 
 ### Extended latent Gaussian model {#elgm}
 
