--- a/corrections/corrections.Rmd
+++ b/corrections/corrections.Rmd
@@ -113,7 +113,7 @@ knitr::include_graphics("../figures/bayesian/conjugate.png")
 
 Good point!
 I have added the sentence:
-"Further, even given a closed form expression for the posterior distribution, if $\mathbf{\phi}}$ is of moderate to high dimension, then it is not obvious how to evaluate expressions of interest, which usually themselves are integrals, or expectations, with respect to the posterior distribution.".
+"Further, even given a closed form expression for the posterior distribution, if $\boldsymbol{\mathbf{\phi}}$ is of moderate to high dimension, then it is not obvious how to evaluate expressions of interest, which usually themselves are integrals, or expectations, with respect to the posterior distribution.".
 
 > *19. You haven't defined 'convergence' when you dive into diagnostics.*
 
@@ -132,7 +132,10 @@ I have corrected to "data are" in these instances, and searched through the thes
 
 > *30. You distinguish ELGM from LGM with having defined eta for LGM or been explicit about 1:1 relationship of x and y.*
 
-Not yet resolved.
+Good point.
+In an LGM, it is that there is a one-to-one relationship between $\mathbf{y}$ and $\boldsymbol{\mathbf{\eta}}$.
+I have added the sentence:
+"In an LGM, like the more general GLMM case as given in Equation (3.6), there is a one-to-one correspondence between observations $y_i$ and elements of the linear predictor $\eta_i$.".
 
 > *Sec 3.4: worth commenting on additivity of these measures that treat each obs as a unit of information given you are in a spatial setting.*
 
@@ -158,11 +161,14 @@ I imagine this relates to Equation (4.4) and the equation for the probability de
 
 > *41. "recommended against": passive, and by who?*
 
-Not yet resolved.
+Altered the text to read:
+"Directly using the Besag model as described in Section 4.1.1 has several practical limitations in applied settings.
+To overcome these limitations, @freni2018note recommend three best practices:".
 
 > *42. Why is unit variance correct?*
 
-Not yet resolved.
+Yes that's a good point, what I mean to say is that the singletons have unit variance in the "structure matrix" sense.
+I have corrected the text to read that $p(u_i) \sim \mathcal{N}(0, \tau_u^{-1})$.
 
 > *47. tau_v an d tau_w are not orthogonal - what does this mean?*
 
