Update long slides for lab presentation

--- a/corrections/corrections.Rmd
+++ b/corrections/corrections.Rmd
@@ -104,7 +104,8 @@ Thank you for the pointer, I have fixed this issue and look forward to joining t
 
 > *Fig 3.1: I suggest that you also show the likelihood.*
 
-I have now included the likelihood in this figure as follows:
+I have now included the likelihood in this figure as follows.
+Figure 6.1, demonstrating the Laplace approximation, has also been updated to include the likelihood.
 
 ```{r conjugate}
 knitr::include_graphics("../figures/bayesian/conjugate.png")
