--- a/references.bib
+++ b/references.bib
@@ -3092,3 +3092,10 @@ URL = {https://doi.org/10.1214/12-SS102}
   author={{UN General Assembly}},
   year={2016}
 }
+
+@misc{howes2023estimating,
+  author = {Howes, Adam},
+  title = {Adam Howes: Estimating risk group proportions: informal discussion},
+  url = {https://athowes.github.io/posts/2023-04-21-risk-group-retrospective/},
+  year = {2023}
+}
