Note on IRR for "High" #9

--- a/corrections/corrections.Rmd
+++ b/corrections/corrections.Rmd
@@ -238,7 +238,9 @@ Changed to "female sex workers (FSW)".
 
 > *71: In Table 1 why does High risk group IRR not vary with local incidence?*
 
-This was a modelling assumption which was made for the following reasons.
+The conceptual model underpinning this decision was to frame the "High" risk group as a part of the general population at higher risk and the "Very High" risk group as a concentrated epidemic subpopulation.
+In reality IRR is likely to vary by local incidence for the "Very High" risk group as well, and as such this is a fair critique.
+Practically speaking, the ALPHA network data used to inform the "High" IRR has quite little geographic variation.
 
 > *71: Purpose of Table 1 is not clear. Nor how IRR is to be used.*
 
